ADD change theme function
It allows to switch between light / dark mode

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="index.css">
         <title> Generate a random password </title>
     </head>
-    <body>
+    <body id="body">
         <div class="container">
             <header>
                 <input type="checkbox" name="toggle" id="toggle-button" class="toggle-button">
