--- a/index.html
+++ b/index.html
@@ -1,39 +1,44 @@
 <html lang="en">
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <link rel="stylesheet" href="index.css">
+        <!-- GOOGLE FONTS -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
         <title> Generate a random password </title>
     </head>
-    <body id="body">
-        <div class="container">
+    <body>
+        <div class="container" id="page-container">
             <header>
-                <input type="checkbox" name="toggle" id="toggle-button" class="toggle-button">
-                <label for="toggle-button" class="text" style="visibility:hidden">Toggle Button</label>
-                <div>
-                    <h1 class="title">Generate a <br> <span>random password </span> </h1>
-                    <h2 class="subtitle">Never use an insecure password again.</h3>
+                <div class="toggle-container">
+                    <input type="checkbox" name="toggle" id="toggle-button" class="toggle-button">
+                    <label for="toggle-button" class="text"> Toggle Button </label>
                 </div>
+                <h1 class="title">Generate a <br> <span>random password </span> </h1>
+                <p>Never use an insecure password again.</p>
             </header>
             
             <main>
                 <div>
-                <label for="password-length-input"> Type a number between 5 and 15 for your password length: </label>
-                <input type="text" 
-                    id="password-length-input" 
-                    name="password-length" 
-                    onfocus="this.value=' '" 
-                    placeholder="15" 
+                    <label for="password-length-input"> Type a number between 5 and 15 for your password length: </label>
+                    <input type="text" 
+                        class="password-length-input"
+                        id="password-length-input" 
+                        name="password-length" 
+                        onfocus="this.value=' '" 
+                        placeholder="15" 
                     >
+                    <p id="error-message"> </p>
                 </div>
-                <div>
-                    <button id="no-numbers-btn"> No numbers in your password </button>
-                    <button id="no-symbols-btn"> No symbols in your password </button>
+                <div class="btn-container" id="btn-container">
+                    <button id="no-numbers-btn"> Exclude numbers  </button>
+                    <button id="no-symbols-btn"> Exclude symbols </button>
                 </div>
-                <button id="btn__password">Generate passwords </button>
-
-                <p id="error-message"> </p>
-                <div class="password__container">
-                    <p id="first__password" class="password"></p>
-                    <p id="second__password" class="password"></p>
+                <button id="btn-password">Generate passwords </button>
+                <div class="password-container" id="password-container">
+                    <p id="first-password" class="password"></p>
+                    <p id="password-copied-message" class="password-copied-message"> </p>
+                    <p id="second-password" class="password"></p>
                 </div>
             </main>
           </div>
