--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <p id="error-message"> </p>
                 </div>
                 <div class="btn-container" id="btn-container">
-                    <button id="no-numbers-btn"> Exclude numbers  </button>
-                    <button id="no-symbols-btn"> Exclude symbols </button>
+                    <button id="numbers" > Exclude numbers  </button>
+                    <button id="symbols"> Exclude symbols </button>
                 </div>
-                <button id="btn-password">Generate passwords </button>
+                <button id="btn-generate-password">Generate passwords </button>
                 <div class="password-container" id="password-container">
                     <p id="first-password" class="password"></p>
                     <p id="password-copied-message" class="password-copied-message"> </p>
